--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 .h2 {
     font-size: 12rem;
     color: blue;
-    text-decoration: underline;
+    text-decoration: underline;    
+}
+
+.div {
+    font-size: 12rem;
 }
